--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,29 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+.awssld__wrapper {
+    height: 500px !important;
+    overflow: hidden !important;
+}
+
+.App {
+    /* Your common styles for both dark and light modes */
+  }
+  
+.App.dark {
+/* Dark mode styles */
+background-color: #333;
+color: #fff;
+}
+
+.App.light {
+/* Light mode styles */
+background-color: #fff;
+color: #333;
+}
+  
+  
+  
+  
+  
+  
